--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Puzzle_game_arwa_shamaly"
         tools:targetApi="31">
+        <service
+            android:name=".Services.MusicService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".Activities.EditProfileScreen"
             android:exported="false">
@@ -62,6 +67,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
