--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,7 +17,8 @@
             android:name=".Services.MusicService"
             android:enabled="true"
             android:exported="true"></service>
-
+        <service android:name=".Services.NotificationService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
         <activity
             android:name=".Activities.EditProfileScreen"
             android:exported="false">
